# third-homomorphism

./: README.md  third-homomorphism.cabal
.circleci/: config.yml
bench/: Main.hs
src/Third/: Homomorphism.hs
src/Third/Homomorphism/: Fold.hs  Type.hs
test/Third/: HomomorphismSpec.hs
test/Third/Homomorphism/: Gen.hs
